--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -15,5 +15,4 @@ jobs:
       - name: Lint Code Base
         uses: docker://github/super-linter:v3
         env:
-          VALIDATE_ALL_CODEBASE: true
-          VALIDATE_ANSIBLE: false
+          VALIDATE_ALL_CODEBASE: false
