--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/coliff/dark-mode-switch.git"
   },
   "license": "MIT",
-  "author": "Christian Oliff <christianoliff@pm.me>",
+  "author": "Christian Oliff (https://christianoliff.com)",
   "main": "dark-mode-switch.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
