--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
   "author": "Christian Oliff (https://christianoliff.com)",
   "main": "dark-mode-switch.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "prettier --write dark-mode-switch.js",
+    "test": "eslint dark-mode-switch.js"
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1"
   }
 }
