--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,3 +16,4 @@ jobs:
         uses: docker://github/super-linter:v3
         env:
           VALIDATE_ALL_CODEBASE: false
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
