--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -11,9 +11,13 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+        with:
+          # Full git history is needed to get a proper list of changed files within `super-linter`
+          fetch-depth: 0
 
       - name: Lint Code Base
         uses: docker://github/super-linter:v3
         env:
           VALIDATE_ALL_CODEBASE: false
+          DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
