--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,13 @@
 {
   "root": true,
   "extends": ["eslint:recommended", "prettier"],
-  "plugins": ["prettier"],
+  "plugins": ["ie11", "prettier"],
   "rules": {
-    "prettier/prettier": ["error"],
-    "no-undef": "off"
+    "prettier/prettier": ["warn"],
+    "no-undef": "off",
+    "ie11/no-collection-args": ["error"],
+    "ie11/no-for-in-const": ["error"],
+    "ie11/no-loop-func": ["warn"],
+    "ie11/no-weak-collections": ["error"]
   }
 }
