--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -20,5 +20,7 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: main
+          VALIDATE_EDITORCONFIG: false
+          VALIDATE_HTML: false
           VALIDATE_MARKDOWN: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
