update dev deps and tests

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,11 +2,13 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - "!dependabot/**"
   pull_request:
-    branches: [ main ]
-  schedule:
-    - cron: '39 1 * * 0'
+    branches:
+      - main
+      - "!dependabot/**"
 
 jobs:
   analyze:
@@ -17,11 +19,6 @@ jobs:
       contents: read
       security-events: write
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'javascript' ]
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -29,10 +26,7 @@ jobs:
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
-        languages: ${{ matrix.language }}
-
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+        languages: "javascript"
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
