--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -18,8 +18,9 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter/slim@v4
         env:
-          VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          JAVASCRIPT_DEFAULT_STYLE: prettier
+          VALIDATE_ALL_CODEBASE: false
           VALIDATE_HTML: false
           VALIDATE_MARKDOWN: false
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
