Update Dev Deps

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,12 +3,13 @@ updates:
   - package-ecosystem: npm
     directory: "/"
     schedule:
-      interval: monthly
+      interval: weekly
     versioning-strategy: increase
     reviewers:
       - coliff
     labels:
       - dependencies
+    open-pull-requests-limit: 1
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
